2010-04-08  Andreas Jaeger  <aj@suse.de>

	[BZ #10401]
	* math/s_cprojl.c (__cprojl): Fix implementation to follow C99
	standard.
	* math/s_cprojf.c (__cprojf): Likewise.
	* math/s_cproj.c (__cproj): Likewise.
	* sysdeps/ieee754/ldbl-128ibm/s_cprojl.c (__cprojl): Likewise.
	* math/libm-test.inc (cproj_test): Fix test.

2010-04-07  Ulrich Drepper  <drepper@redhat.com>

	* posix/bug-getopt1.c: New file.
	* posix/bug-getopt2.c: New file.
	* posix/bug-getopt3.c: New file.
	* posix/bug-getopt4.c: New file.
	* posix/bug-getopt5.c: New file.

2009-12-01  Eric Blake  <ebb9@byu.net>

	[BZ #11039]
	* posix/getopt.c (_getopt_internal_r): Skip optional - or + before
	checking lead byte of optstring for :.

	[BZ #11040]
	* posix/getopt.c (_getopt_internal_r): Reject '-;' as short
	option, since it conflicts with "W;" optstring extension.

2009-12-02  Eric Blake  <ebb9@byu.net>

	[BZ #11041]
	* posix/getopt.c (_getopt_internal_r): Handle '-Wfoo' identically
	to '--foo', with optional argument or non-ambiguous prefix.

2010-04-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11134]
	* nis/libnsl.h (NSS_FLAG_ADJUNCT_AS_SHADOW): Define.
	* nis/nss: Document new ADJUNCT_AS_SHADOW variable.
	* nis/nss-default.c: Handle ADJUNCT_AS_SHADOW variable.
	* nis/nss_nis/nis-pwd.c (internal_nis_endpwent): Minor cleanups.
	(internal_nis_getpwent_r): Don't fill in password from adjunct table
	if NSS_FLAG_ADJUNCT_AS_SHADOW is set.
	(_nss_nis_getpwnam_r): Likewise.
	(_nss_nis_getpwuid_r): Likewise.
	* nis/nss_nis/nis-spwd.c (ent_adjunct_used): New global variable.
	(_nss_nis_setspent): Also reset ent_adjunct_used.
	(internal_nis_getspent_r): If new_start is set and shadow.byname table
	does not exist and NSS_FLAG_ADJUNCT_AS_SHADOW is set, try to get
	passwd.adjunct.byname table.  If new_start is not set get next entry
	from the initially used table.  Synthesize shadow.byname table if
	necessary by adding two empty fields.
	(_nss_nis_getspnam_r): If shadow.byname table does not exist and