@@ -1,3 +1,8 @@
+2010-04-07  Andreas Schwab  <schwab@redhat.com>
+
+	* sysdeps/unix/sysv/linux/i386/fallocate.c: Set errno on error.
+	* sysdeps/unix/sysv/linux/i386/fallocate64.c: Likewise.
+
 2010-04-08  Andreas Jaeger  <aj@suse.de>
 
 	[BZ #10401]
